--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
 
 <body class="product-page">
 
-  <!-- NAVBAR -->
+  
   <div class="nav-wrapper">
     <nav class="nav-bar">
       <div class="nav-left">NAYAAB</div>
@@ -24,7 +24,7 @@
     </nav>
   </div>
 
-  <!-- CART CONTENT -->
+  
   <main class="product-container">
 
     <h2 class="category-title">Your Cart</h2>
@@ -36,10 +36,15 @@
     <button class="btn" style="max-width:300px;margin-top:20px;">
       Proceed to Checkout
     </button>
+    <button class="btn" style="max-width:300px;margin-top:15px;"
+        onclick="clearCart()">
+      Clear Cart
+   </button>
+
     </a>
 
   </main>
-
+  
   <script src="js/script.js"></script>
 </body>
 </html>
