--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MenStyle</title>
+  <title>NAYAAB</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="home-bg">
 
-  <!-- FLOATING NAVBAR -->
+  
   <div class="nav-wrapper">
     <nav class="nav-bar">
       <div class="nav-left">NAYAAB</div>
@@ -15,7 +15,9 @@
       <div class="nav-center">
         <a href="index.html">HOME</a>
         <a href="product.html">SHOP</a>
+        <a href="feedback.html">FEEDBACK</a>
         <a href="#">CONTACT</a>
+        
       </div>
 
       <div class="nav-right">
@@ -24,14 +26,14 @@
     </nav>
   </div>
 
-  <!-- CENTER TEXT -->
+  
   <div class="home-overlay">
-    <h1>Men’s Jewellery & Accessories</h1>
+    <h1>नायाब</h1>
     <p>Minimal • Modern • Premium</p>
     <a href="product.html" class="primary-btn">Shop Now</a>
   </div>
 
-  <!-- FLOATING CATEGORIES -->
+  
   <div class="floating-categories">
     <div class="category-card">Earrings</div>
     <div class="category-card">Rings</div>
@@ -40,6 +42,6 @@
     <div class="category-card">Chains</div>
     <div class="category-card">Wallets</div>
   </div>
-
+<script src="js/script.js"></script>
 </body>
 </html>
